# moo

./: .env.example  .gitignore  README.md  docker-compose.yaml  pipeline_config.yaml  pyproject.toml  requirements.txt  setup.py
config/: pipeline_config.yaml
scripts/: run_pipeline_sample_data.py
src/moo/extract/connectors/: base_connector.py  thegraph_connector.py
src/moo/extract/extractors/: cowswap_extractor.py
src/moo/load/loaders/: postgres_loader.py
src/moo/load/schemas/: base.py  swap_schema.py
src/moo/pipeline/: orchestrator.py  run.py
src/moo/transform/transformers/: swap_transformer.py
src/moo/transform/validators/: data_validator.py
src/moo/utils/: config.py  query.py
tests/: test_data_processor.py
